--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
       "error",
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
     ],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/extensions": "off",
+    "import/no-unresolved": "off"
   }
 }
